readded metaterran sources :/

--- a/src/views/includes/resume/candidate.jade
+++ b/src/views/includes/resume/candidate.jade
@@ -12,7 +12,7 @@ header(id='resume-header')
                             div(class='center')
                                 ul(class='inline')
                                     li(class='inline')
-                                        a(href= '#bottom')
+                                        a(href= '#contact')
                                             i(class='material-icons') email
                                     li(class='inline')
                                         a(href!= phone, target='blank')
