--- a/src/views/mail.jade
+++ b/src/views/mail.jade
@@ -1,8 +1,8 @@
 doctype html
 html(xmlns='http://www.w3.org/1999/xhtml')
     head
-        link(rel='stylesheet', href!= host + '/stylesheets/mail.css')
-        link(rel='stylesheet', href!= host + '/stylesheets/vendor/materialize.min.css')
+        link(rel='stylesheet', href= 'http://www.metaterran.com:3000//stylesheets/mail.css')
+        link(rel='stylesheet', href= 'http://www.metaterran.com:3000//stylesheets/vendor/materialize.min.css')
         //GOOGLE FONTS
         link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet' type='text/css')
         link(href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700,800' rel='stylesheet' type='text/css')
@@ -14,7 +14,7 @@ block content
                 div(class='row valign')
                     div(class='card')
                         div(class='card-image')
-                            img(src!= host + '/images/maghrib.jpg')
+                            img(src= 'http://www.metaterran.com:3000//images/maghrib.jpg')
                             h1.truncate
                                 span(class='card-title heavy-font') Meet Maghrib
                         div(class='card-content')
