--- a/src/views/includes/components/menu.jade
+++ b/src/views/includes/components/menu.jade
@@ -1,7 +1,7 @@
 // OPEN/CLOSE
-#overlay.overlay.overlay-hugeinc.valign-wrapper
+#overlay.black-text.overlay.overlay-hugeinc.valign-wrapper
     a.overlay-close.close-button(type='button')
-        i.white-text.material-icons.medium close
+        i.material-icons.medium close
     ul.center-align.valign
         li.closer
             a(href='#', onclick='closeTheShit()') Print
