--- a/src/views/includes/resume/resume.jade
+++ b/src/views/includes/resume/resume.jade
@@ -37,4 +37,4 @@ for job in resume
                     div(class='col s12')
                         ul(class='my-lists') !{job.bullets}
                     div(class='modal-footer')
-                        a(href='#!' class='modal-action modal-close waves-effect btn-flat') Close
+                        a(href='#' class='modal-action modal-close waves-effect btn-flat') Close
