updated sources in left, menu and mail jade files

--- a/src/views/includes/components/left.jade
+++ b/src/views/includes/components/left.jade
@@ -13,6 +13,6 @@ section#resume-left-side
         h3.white-text.center-align.remove-margin-top-bottom Education
     include ../resume/education
     // CANDIDATE GITHUB
-    div(class!= templates['educationHeader'])
-        h3.white-text.center-align.remove-margin-top-bottom GitHub
-    include ../resume/github
+    //div(class!= templates['educationHeader'])
+    //    h3.white-text.center-align.remove-margin-top-bottom GitHub
+    //include ../resume/github
