--- a/src/views/includes/components/menu.jade
+++ b/src/views/includes/components/menu.jade
@@ -4,10 +4,10 @@
         i.material-icons.medium.white-text close
     ul.center-align.valign
         li.closer
-            a(href='#', onclick='closeTheShit()') Print
+            a(href='http://resumebuilder.sajjad.nyc/SajjadHossain-Resume2015.pdf', onclick='closeTheShit()') Print
         li.closer
-            a(href='#', onclick='closeTheShit()') Download
+            a(href='http://resumebuilder.sajjad.nyc/SajjadHossain-Resume2015.pdf', onclick='closeTheShit()') Download
         li.closer
-            a(href='http://metaterran.com', target='blank', onclick='closeTheShit()') Portfolio
+            a(href='http://sajjad.nyc', target='blank', onclick='closeTheShit()') Portfolio
         li.closer
             a(href='#bottom', onclick='closeTheShit()') Contact
