--- a/src/views/mail.jade
+++ b/src/views/mail.jade
@@ -14,7 +14,7 @@ block content
                 div(class='row valign')
                     div(class='card')
                         div(class='card-image')
-                            img(src= 'http://blog.sajjad.nyc/images/maghrib.jpg')
+                            img(src= 'http://resumebuilder.sajjad.nyc/images/maghrib.jpg')
                             h1.truncate
                                 span(class='card-title heavy-font') Meet Maghrib
                         div(class='card-content')
