updated links in menu to hide on mobile and target blank

--- a/src/views/includes/components/menu.jade
+++ b/src/views/includes/components/menu.jade
@@ -3,10 +3,10 @@
     a.overlay-close.close-button(type='button')
         i.material-icons.medium.white-text close
     ul.center-align.valign
-        li.closer
-            a(href='http://resumebuilder.sajjad.nyc/SajjadHossain-Resume2015.pdf', onclick='closeTheShit()') Print
-        li.closer
-            a(href='http://resumebuilder.sajjad.nyc/SajjadHossain-Resume2015.pdf', onclick='closeTheShit()') Download
+        li.closer.hide-on-small-only
+            a(href='http://resumebuilder.sajjad.nyc/SajjadHossain-Resume2015.pdf', target='_blank', onclick='closeTheShit()') Print
+        li.closer.hide-on-small-only
+            a(href='http://resumebuilder.sajjad.nyc/SajjadHossain-Resume2015.pdf', target='_blank', onclick='closeTheShit()') Download
         li.closer
             a(href='http://sajjad.nyc', target='blank', onclick='closeTheShit()') Portfolio
         li.closer
