updated links and json

--- a/src/views/includes/resume/links.jade
+++ b/src/views/includes/resume/links.jade
@@ -27,6 +27,6 @@ article(id='candidate-contact')
                         span(class='truncate')
             div(class='chips-padding')
                 div(class='chip')
-                    a(href!= website target='blank') !{website}
+                    a(href!= host target='blank') !{website}
                         i(class='material-icons disabled') public
                         span(class='truncate')
